--- a/tex/plain/ccrusius/Makefile
+++ b/tex/plain/ccrusius/Makefile
@@ -1,9 +1,9 @@
 all: ccgrid.pdf ccgrid.lua ccgrid.tex
 
-ccgrid.pdf: ccgrid.ccw
+ccgrid.pdf: ccgrid.ccw ../../../submodules/ccweb/bin/ccweave.lua
 	lua ../../../submodules/ccweb/bin/ccweave.lua ccgrid.ccw > ccgrid_doc.tex
 	luatex --halt-on-error --job-name=ccgrid ccgrid_doc
 
-ccgrid.tex ccgrid.lua: ccgrid.ccw
+ccgrid.tex ccgrid.lua: ccgrid.ccw ../../../submodules/ccweb/bin/cctangle.lua
 	lua ../../../submodules/ccweb/bin/cctangle.lua ccgrid.ccw
 
