update ccweb submodule and use new -job-name option

--- a/tex/plain/ccrusius/Makefile
+++ b/tex/plain/ccrusius/Makefile
@@ -1,8 +1,8 @@
 all: ccgrid.pdf ccgrid.lua ccgrid.tex
 
 ccgrid.pdf: ccgrid.ccw ../../../submodules/ccweb/bin/ccweave.lua
-	lua ../../../submodules/ccweb/bin/ccweave.lua ccgrid.ccw > ccgrid_doc.tex
-	luatex --halt-on-error --job-name=ccgrid ccgrid_doc
+	lua ../../../submodules/ccweb/bin/ccweave.lua -job-name=ccgrid_doc ccgrid.ccw
+	pdftex -halt-on-error -interaction=nonstopmode -job-name=ccgrid ccgrid_doc
 
 ccgrid.tex ccgrid.lua: ccgrid.ccw ../../../submodules/ccweb/bin/cctangle.lua
 	lua ../../../submodules/ccweb/bin/cctangle.lua ccgrid.ccw
