all ccgrid files generated by ccweb

--- a/tex/plain/ccrusius/Makefile
+++ b/tex/plain/ccrusius/Makefile
@@ -8,13 +8,19 @@ all: ccgrid.pdf ccgrid.lua ccgrid.tex
 ifeq ($(OS),Windows_NT)
   PWD := $(shell echo %cd%)
   PWD := $(subst C:,,$(PWD))
+  CP := copy
+  RM := del
 else
   PWD := $(shell pwd)
+  CP := cp
+  RM := rm -f
 endif
 
 ccgrid.pdf: ccgrid.ccw ../../../submodules/ccweb/bin/ccweave.lua
 	lua ../../../submodules/ccweb/bin/ccweave.lua -job-name=ccgrid_doc ccgrid.ccw
-	pdftex -halt-on-error -interaction=nonstopmode -include-directory=$(PWD) -job-name=ccgrid ccgrid_doc
+	pdftex -halt-on-error -interaction=nonstopmode -include-directory=$(PWD) ccgrid_doc
+	$(CP) ccgrid_doc.pdf $@
+	$(RM) ccgrid_doc.pdf
 
 ccgrid.tex ccgrid.lua: ccgrid.ccw ../../../submodules/ccweb/bin/cctangle.lua
 	lua ../../../submodules/ccweb/bin/cctangle.lua ccgrid.ccw
